chore: update version

--- a/tooling/cli/templates/extras/apps/docs/content/docs/guide/data-fetching-api-client.mdx
+++ b/tooling/cli/templates/extras/apps/docs/content/docs/guide/data-fetching-api-client.mdx
@@ -88,6 +88,9 @@ import { AxiosInstance } from 'axios'
 import { ExampleApi } from './sdk/example.api'
 import { PostApi } from './sdk/post.api'
 
+// Export type
+export * from './sdk/post.type'
+
 export class Api {
     example: ExampleApi
     post: PostApi
